# nomadCoder

./: README.md
Python-Course/: indeed.py  jobs.csv  main.py  pyproject.toml  save.py  so.py
Vanilla JS2/: app.js  index.html  styles.css
Vanilla jS/: index.js  weather.js
banila JS/: bg.js  clock.js  index.css  index.html  index.js  todo.js
banilaJS/: bg.js  clock.js  greeting.js  index.css  index.html  todo.js
googleClone/: index.html  style.css
python/: scrapper.ipynb
